# mind

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LAUNCH.md  LICENSE  Makefile  README.md  mind.toml
.claude/: settings.json
.github/workflows/: canary.yml  ci.yml  pages.yml  release.yml
Formula/: mind.rb
docs/: book.toml
docs/assets/: custom.css  custom.js
docs/landing/: app.js  index.html  styles.css
docs/src/: SUMMARY.md  absorb.md  authoring.md  commands.md  configuration.md  dependencies.md  enterprise.md  examples.md  init-source.md  install-hooks.md  install.md  introduction.md  marketplace.md  mind-toml.md  namespacing.md  policy.md  quickstart.md  source-layout.md  tooling.md  troubleshooting.md  tui.md  unmanaged.md
examples/: README.md
examples/absorb/: README.md
examples/discover/: README.md  mind.toml
examples/drift/: README.md
examples/explicit/: README.md  mind.toml
examples/hello/: README.md
examples/hooks/: README.md  mind.toml
examples/marketplace-catalog/: README.md
examples/marketplace-curator/: README.md  mind.toml
examples/marketplace-plugin/: README.md
examples/monorepo/: README.md  mind.toml
examples/multi-lobe/: README.md
examples/namespacing/: README.md  mind.toml
examples/policy/: README.md  policy.toml
examples/starter/: README.md
examples/super-source/: README.md  mind.toml
examples/tooling/: README.md  mind.toml
resources/: changelog-section.sh  install.sh  update-formula.sh
spec/: README.md  absorb.md  cli.md  dependencies.md  discovery.md  dump.md  harness-lobes.md  init-source.md  install-hooks.md  item-link.md  lifecycle.md  marketplace.md  namespacing.md  policy.md  storage.md  tooling.md  tui.md  unmanaged.md
src/: catalog.rs  cli.rs  commands.rs  config.rs  deps.rs  dump.rs  error.rs  frontmatter.rs  git.rs  hash.rs  hook.rs  hooks_cmd.rs  install.rs  lock.rs  main.rs  manifest.rs  mindfile.rs  namespace.rs  paths.rs  plugin_manifest.rs  policy.rs  render.rs  resolve.rs  review.rs  sanitize.rs  scaffold.rs  selfupdate.rs  source.rs  unmanaged.rs
tests/: changelog.rs  cli.rs  cli_absorb.rs  cli_build_hooks.rs  cli_dump.rs  cli_hooks.rs  cli_install_items.rs  cli_item_link.rs  cli_lobes.rs  hook_disclosure.rs  item_lifecycle.rs  recall_hash.rs  review_hooks.rs  spec_coverage.rs
(+46 files in other folders)
