[package]
name = "mind-cli"
version = "0.6.0"
edition = "2024"
license = "MIT"
description = "A manager for agent tooling: skills, agents, and rules from arbitrary git repos."

[[bin]]
name = "mind"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
glob = "0.3"
thiserror = "2"
dirs = "6"
fd-lock = "4"
ratatui = "0.30"
crossterm = "0.29"
libc = "0.2"
