[package]
name = "mind-cli"
version = "0.19.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "A manager for agent tooling (skills, agents, rules, tools) that melds arbitrary git repos and links items into your agent directories."
repository = "https://github.com/jaemk/mind"
homepage = "https://jaemk.github.io/mind/"
documentation = "https://jaemk.github.io/mind/"
readme = "README.md"
keywords = ["agent", "ai", "cli", "automation", "tooling"]
categories = ["command-line-utilities", "development-tools"]
exclude = [".github", "spec/", "docs/"]

[[bin]]
name = "mind"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
glob = "0.3"
thiserror = "2"
sha2 = "0.10"
dirs = "6"
fd-lock = "4"
ratatui = "0.30"
crossterm = "0.29"
libc = "0.2"
strip-ansi-escapes = "0.2"
